--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample Kath</title>
+    <title>Portfolia</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
@@ -562,7 +562,7 @@
             </div>
         </div>
         <div class="last-footer">
-            &copy; P O R T F O L I A. All rights reserved.
+            &copy; P O R T F O L I A. All rights reserved. June 2020.
         </div>
     </section>
     <!-- End of Footer Section -->
